# django-cognito

./: Makefile  README.md  pyproject.toml
src/auth/: admin.py  backend.py  views.py
src/conf/: asgi.py  settings.py  urls.py  wsgi.py
